refactor: java 17 code-smells
 - "Stream.toList()" method should be used instead of "collectors" when unmodifiable list needed
 - Pattern Matching for "instanceof" operator should be used instead of simple "instanceof" + cast