@@ -1,10 +1,8 @@
-import static java.util.stream.Collectors.toList;
-
 import java.util.List;
 import java.util.function.Function;
 
 class Binder<T, I> {
   List<I> bind(List<T> list, Function<T, List<I>> func) {
-    return list.stream().map(func).flatMap(List::stream).collect(toList());
+    return list.stream().map(func).flatMap(List::stream).toList();
   }
 }
