@@ -1,4 +1,3 @@
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.concat;
 
 import java.util.Collection;
@@ -6,6 +5,6 @@ import java.util.List;
 
 interface Kata {
   static List<Character> diff(Collection<Character> a, Collection<Character> b) {
-    return concat(a.stream(), b.stream()).distinct().filter(c -> !a.contains(c) || !b.contains(c)).sorted().collect(toList());
+    return concat(a.stream(), b.stream()).distinct().filter(c -> !a.contains(c) || !b.contains(c)).sorted().toList();
   }
 }
