@@ -1,7 +1,6 @@
 import static java.time.Duration.between;
 import static java.time.Instant.now;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
 import java.util.List;
 
@@ -10,6 +9,6 @@ interface Solution {
     return input.stream()
         .filter(i -> "Red".equals(i.color) && between(i.created, now()).toDays() < 7)
         .sorted(comparing(i -> i.category.name()))
-        .collect(toList());
+        .toList();
   }
 }
