@@ -1,11 +1,10 @@
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.concat;
 
 import java.util.List;
 
 class PhoneNumberMerger {
   List<PhoneNumber> merge(List<PhoneNumber> oldNumbers, List<PhoneNumber> newNumbers) {
-    return concat(newNumbers.stream(), oldNumbers.stream().filter(o -> newNumbers.stream().noneMatch(n -> n.type.equals(o.type)))).collect(toList());
+    return concat(newNumbers.stream(), oldNumbers.stream().filter(o -> newNumbers.stream().noneMatch(n -> n.type.equals(o.type)))).toList();
   }
 
   static class PhoneNumber {
